# ggdatetime

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  SConstruct  aclocal.m4  config.h.in  configure  configure.ac  datetimeConfig.cmake  run_test_suite.py
.github/workflows/: clang-format-check.yml  cpp-linux-build.yml  full-linux-build.yml  minimal-linux-build.yml  test-libdatetime.yml
doc/: doxy.conf  readme.md  tutorial.md
include/: calendar.hpp  cdatetime.hpp  date_integral_types.hpp  datetime_interval.hpp  datetime_io_core.hpp  datetime_read.hpp  datetime_tops.hpp  datetime_utc.hpp  datetime_write.hpp  dtconcepts.hpp  dtdatetime.hpp  dtfund.hpp  fractional_types.hpp  hms_time.hpp  time_int2flt.hpp  time_integral_types.hpp  tpdate.hpp  tpdate2.hpp
src/: CMakeLists.txt  Makefile.am  Makefile.am.production  Makefile.in  calendar.hpp  cdatetime.hpp  dat.cpp  datetime_io_core.cpp  datetime_io_core.hpp  datetime_read.hpp  datetime_tops.hpp  datetime_write.hpp  day_of_month.cpp  dtcalendar.hpp  dtconcepts.hpp  dtdatetime.hpp  dterror.hpp  dtfund.cpp  dtfund.hpp  gnsstm.hpp  hms_time.hpp  modified_julian_day.cpp  strmonth.cpp  t_hmsf.hpp  tai2utc.cpp  time_scales.hpp  tpdate.hpp  tpdate2.hpp  tpdateutp.cpp  twopartdate_utc.cpp  twopartdates.cpp  utc2tai.cpp  utc_dtf2d.cpp  utc_strptime.cpp  utcdates.hpp  ydoy_date.cpp  ymd_date.cpp
src/core/: cdatetime.hpp  datetime_io_core.hpp  fundamental_calendar_utils.hpp  fundamental_types_generic_utilities.hpp
src/lib/: CMakeLists.txt  dat.cpp  datetime_io_core.cpp  modified_julian_day.cpp  month.cpp  strmonth.cpp  tpdateutc.cpp  twopartdates.cpp  utc2tai.cpp  ydoy_date.cpp  ymd_date.cpp
test/: Makefile.am  Makefile.am.debug  Makefile.am.production  Makefile.in  example.cpp  playwithsec.cpp  test_cal2jd_sofa.cpp  test_dat.cpp  test_dt_read.cpp  test_gpst.cpp  test_jdcalendar.cpp  test_jdepoch_sofa.cpp  test_operators.cpp  test_secdif.cpp
test/examples/: playwithsec.cpp
test/precision/: README.md  tp2dt.cpp  tpadd.cpp  tpd_add_lnanosec.cpp  tpd_add_nanosec.cpp  tpd_sub_nanosec.cpp
test/should_not_compile/: CMakeLists.txt  datetime_diff_type.cpp  datetime_diff_type_comparisson.cpp  fractional_seconds_op_equal.cpp  fractional_seconds_op_greater.cpp  fund_type_op_plusequal.cpp  readme.md
test/sofa/: CMakeLists.txt  cal2jd.cpp  dat.cpp  epj.cpp  epj_date.cpp  jd2cal.cpp  test_cal2jd_sofa.cpp
test/timer/: test_tpdate_normalization.cpp
test/unit_tests/: CMakeLists.txt  date_diff.cpp  datetime.cpp  datetime_addition.cpp  datetime_addition_sec.cpp  datetime_addition_sec2.cpp  datetime_diff.cpp  datetime_interval_constructor.cpp  datetime_static_ce_constructor.cpp  dom.cpp  doy.cpp  dread.cpp  dread2.cpp  dread21.cpp  dread3.cpp  dwrite.cpp  dwrite10.cpp  dwrite2.cpp  dwrite3.cpp  dwrite4.cpp  dwrite5.cpp  dwrite6.cpp  dwrite7.cpp  dwrite8.cpp  dwrite9.cpp  from_mjdepoch.cpp  hour_mock_1.cpp  hour_mock_2.cpp  hour_mock_3.cpp  hours.cpp  interval.cpp  leap_insertion_dates_mjd.cpp  leapday.cpp  mjd.cpp  month.cpp  sectype_casts.cpp  tai2utc_tpd.cpp  test_datetime_write.cpp  test_interval_overlap.cpp  test_jdsplit.cpp  (+18 more)
test/var_tests/: example.cpp
var/: Makefile.am  chec_int_sizes.cc  make_unit_tests.sh  sec_dif_time.cpp  sofa_cmp_mjd.c  test_day_of_month.cpp  test_day_of_year.cpp  test_fractional_seconds.cpp  test_gps_week.cpp  test_hmfs.cpp  test_microseconds.cpp  test_modified_julian_day.cpp  test_month.cpp  test_seconds.cpp  test_ydoy.cpp  test_year.cpp  test_year_error.cpp
